--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,14 @@ services:
     container_name: "web"
     depends_on:
       - catalogue 
+  redis:
+    images: "redis"
+  user:
+    image: "user:v1"
+    container_name: "user"
+    depends_on:
+      - redis
+      - mongodb
 
 
 
