--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
     depends_on:
       - catalogue 
   redis:
-    images: "redis"
+    image: "redis"
   user:
     image: "user:v1"
     container_name: "user"
