--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
     container_name: "web"
     depends_on:
       - catalogue 
+      - cart
+      - user
   redis:
     image: "redis"
   user:
@@ -26,6 +28,13 @@ services:
     depends_on:
       - redis
       - mongodb
+  cart:
+    image: "cart:v1"
+    container_name: "cart"
+    depends_on:
+      - redis
+      - catalogue
+
 
 
 
