--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,8 @@ services:
       - catalogue 
       - cart
       - user
+      - mysql
+      - shipping
   redis:
     image: "redis"
   user:
@@ -34,7 +36,13 @@ services:
     depends_on:
       - redis
       - catalogue
-
-
+  mysql:
+    image: "mysql:v1"
+    container_name: "mysql"
+  shipping:
+    image: "shipping:v1"
+    container_name: "shipping"
+    depends_on:
+      - mysql
 
 
